--- a/05 Activity&Intent/xmlDesign1/gradle/wrapper/gradle-wrapper.properties
+++ b/05 Activity&Intent/xmlDesign1/gradle/wrapper/gradle-wrapper.properties
@@ -3,4 +3,5 @@ distributionBase=GRADLE_USER_HOME
 distributionPath=wrapper/dists
 zipStoreBase=GRADLE_USER_HOME
 zipStorePath=wrapper/dists
-distributionUrl=https\://services.gradle.org/distributions/gradle-3.4.1-all.zip
+distributionUrl=file:///C:/Users/chenz/.gradle/wrapper/dists/gradle-3.3-all/55gk2rcmfc6p2dg9u9ohc3hw9/gradle-3.3-all.zip
+#distributionUrl=https\://services.gradle.org/distributions/gradle-3.3-all.zip
